# Animera

./: .gitmodules  Animera.rc  CMakeLists.txt  CMakeSettings.json  Info.plist  README.md  new plan.txt  notes.txt  plan r1.txt  todo.txt  tool icons.anim
Animera.xcodeproj/: project.pbxproj
Animera.xcodeproj/xcshareddata/xcschemes/: Animera.xcscheme  Graphics-Test.xcscheme
Animera.xcodeproj/xcuserdata/indianakernick.xcuserdatad/xcschemes/: xcschememanagement.plist
Animera.xcodeproj/xcuserdata/indikernick.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Animera.xcodeproj/xcuserdata/indikernick.xcuserdatad/xcschemes/: xcschememanagement.plist
Anims/: color formats.anim  combobox.anim  cursors.anim  palette select.anim  slider bar.anim  sv graph circle.anim  text button.anim  timeline.anim  title.anim  tool icons.anim
Assets.xcassets/: Document.icns
Assets.xcassets/AppIcon.appiconset/: Contents.json
Pixel 2/: AppDelegate.swift  Document.swift  Info.plist  icon.anim  main.cpp  new plan.txt
Pixel 2.xcodeproj/: project.pbxproj
Pixel 2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Pixel 2.xcodeproj/xcshareddata/xcschemes/: Pixel 2.xcscheme
Pixel 2.xcodeproj/xcuserdata/indikernick.xcuserdatad/xcschemes/: xcschememanagement.plist
Pixel 2/Base.lproj/: MainMenu.xib
Pixel 2/src/: image.cpp  image.hpp
Resources/: icon.px2  resources.qrc  resources.rcc
Resources/Animations/: dmg background.animera  graph circle.animera  slider bar.animera  text button.animera  title.animera  tools.animera
Resources/Color Picker/: palette select.pbm  slider bar p.pbm  slider bar s.pbm  sv circle p.pbm  sv circle s.pbm
Resources/Cursors/: circle b.pbm  circle m.pbm
Resources/Fonts/: 5x7+2_var_ascii.sfd  5x7+2ascii.sfd  5x7ascii.sfd  5x9 ascii.atlas
Resources/General/: down arrow.pbm  text button.pbm  up down arrow.pbm
Resources/Sprites/: appicon.animera  dmg background.animera  docicon.animera  formats.animera  graph circle.animera  palette select.animera  slider bar.animera  social.animera  text box icon.animera  text button.animera  timeline.animera  title.animera  tools.animera
Resources/Timeline/: add.pbm  begin linked cell.pbm  cell.pbm  end linked cell.pbm  hidden.pbm  link.pbm  move down.pbm  move up.pbm  move.pbm  pause.pbm  play.pbm  remove.pbm  shown.pbm  unlink.pbm
Resources/Tools/: base.pbm  brush.pbm  filled circle.pbm  filled rectangle.pbm  flip.pbm  flood fill.pbm  line.pbm  polygon select.pbm  rectangle select.pbm  rotate.pbm  stroked circle.pbm  stroked rectangle.pbm  translate.pbm  wand select.pbm
Sprites/: formats.animera  icon.animera  palette select.animera  timeline.animera  title.animera  tools.animera
doc/: animation format.md  sprite format.md  todo.txt
include/Graphics/: color.hpp  compare.hpp  convert.hpp  copy.hpp  draw.hpp  each.hpp  fill.hpp  flood fill.hpp  format.hpp  geometry.hpp  image.hpp  iterator.hpp  mask.hpp  porter duff.hpp  range.hpp  region.hpp  surface.hpp  traits.hpp  transform.hpp  visit.hpp
include/Simpleton/Utils/: atom.hpp  compose string.hpp  compose string.inl  parse string.inl
lib/: update
scripts/: add-bom.sh  addbom.sh  create-app-icon.sh  create-dmg-icon.sh  create-dmg.sh  create-doc-icon.sh  create-ico.sh  createdmg.sh  createico.sh  dmg.json
src/: abstract export params.cpp  abstract export params.hpp  animation file.cpp  animation file.hpp  animation.cpp  animation.hpp  animation.moc  application.cpp  application.hpp  application.moc  atlas generator.cpp  atlas generator.hpp  basic atlas generator.cpp  basic atlas generator.hpp  brush tool.cpp  brush tool.hpp  cel array.cpp  cel array.hpp  cel painter.cpp  cel painter.hpp  cel span painter.cpp  cel span painter.hpp  cel span.cpp  cel span.hpp  cel.cpp  cel.hpp  cell impls.cpp  cell impls.hpp  cell span.cpp  cell span.hpp  cell.cpp  cell.hpp  chunk io.cpp  chunk io.hpp  clear object.cpp  clear object.hpp  clear object.moc  cli export.cpp  cli export.hpp  cli info.cpp  (+272 more)
test/Graphics/: common.hpp  copy.cpp  fill.cpp  main.cpp  odr.cpp  shrink.cpp  transform.cpp
